@@ -1,3 +1,12 @@
+Sat Feb  7 00:34:45 2004  Jonathan Blandford  <jrb@gnome.org>
+
+	* gnome-theme-manager.c (load_meta_themes): fix #106424
+
+Fri Feb  6 20:49:25 2004  Jonathan Blandford  <jrb@gnome.org>
+
+	* gnome-theme-details.c (gnome_theme_details_init): Patch from
+	Frederic Crozat to install themes in the right place.
+
 Wed Feb  4 00:05:11 2004  Jonathan Blandford  <jrb@gnome.org>
 
 	* gnome-theme-manager.c (load_meta_themes): exit if it is a
